// go:generate protoc -I. -I$GOPATH/src --gogo_out=. meta.proto
syntax = "proto3";
package pbst;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  false;

message meta_data {
    option (gogoproto.stringer) =  true;
    int64 root = 1;
    int64 t_size = 3;
    int64 leaf_max = 4;
    int64 node_max = 5;
    int64 index_cursor = 7;
    int64 index = 8;
    repeated node nodes = 9;
}

message node {

    enum Type {
        Node = 0;
        Leaf = 1;
    }

    int64 id = 1;
    repeated bytes keys = 2;
    repeated int64 children = 3;
    repeated bytes values = 4;
    Type type = 5;
    int32 is_dirt = 6;
}